k8s/dvr/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - name: app
          image: app:latest
          imagePullPolicy: Always
          ports: []
          volumeMounts:
            - name: downloads
              mountPath: /downloads
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /config
            type: DirectoryOrCreate
      restartPolicy: Always
